src/objects/Utility_Rate_Code_Price_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Average_Avoided_Rate__c</fullName>
        <label>Average Avoided Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <label>Utility Company</label>
        <referenceTo>Utility_Company__c</referenceTo>
        <relationshipLabel>Utility Rate Code Price Schedule</relationshipLabel>
        <relationshipName>Utility_Rate_Code_Price_Schedule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Utility Rate Code Price Schedule</label>
    <nameField>
        <displayFormat>URC-{00000}</displayFormat>
        <label>Utility Rate Code Price Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utility Rate Code Price Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>